// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationDrawerListItemHeader list item header with custom icon applied  1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <h2
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      Pod quit unexpectedly
    </h2>
  </div>
</DocumentFragment>
`;

exports[`NotificationDrawerListItemHeader list item header with srTitle applied  1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <h2
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      <span
        class="pf-v6-screen-reader"
      >
        screen reader title
      </span>
      Pod quit unexpectedly
    </h2>
  </div>
</DocumentFragment>
`;

exports[`NotificationDrawerListItemHeader list item header with variant applied  1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <h2
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      Pod quit unexpectedly
    </h2>
  </div>
</DocumentFragment>
`;

exports[`NotificationDrawerListItemHeader renders with PatternFly Core styles 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <h2
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      Pod quit unexpectedly
    </h2>
  </div>
</DocumentFragment>
`;

exports[`NotificationDrawerListItemHeader renders with correct heading level 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-notification-drawer__list-item-header"
  >
    <span
      class="pf-v6-c-notification-drawer__list-item-header-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <h3
      class="pf-v6-c-notification-drawer__list-item-header-title"
    >
      Pod quit unexpectedly
    </h3>
  </div>
</DocumentFragment>
`;
